[package]
name = "gdflock"
version = "0.1.13"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.11"
bevy_ecs = "0.9"
bevy_app = "0.9"
bevy_hierarchy = "0.9"
bevy_time = "0.9"

[build-dependencies]
serde = "1.0"
serde_json = "1.0"